[tool.poetry]
name = "UserService"
version = "0.1.0"
description = ""
authors = ["jungmir <ham4051@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
pydantic = "^1.9.2"
pymongo = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest-sugar = "^0.9.5"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
